[tool.poetry]
name = "eyebreak"
version = "0.1.0"
description = ""
authors = ["Yevhen Shymotiuk <yevhenshymotiuk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pync = "^2.0.3"
rumps = "^0.3.0"
schedule = {git = "https://github.com/mrhwick/schedule.git"}

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
eyebreak = "eyebreak:__main__"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
